2002-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Interpret a mapping to '//' in the WordMap as
	meaning that the resto of the line containing the mapped value
	should be ignored.

2002-04-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/make_strings/GNUmakefile - modified to prevent build
	error when building from scratch
	* Tools/make_strings/GNUmakefile.preamble - added to provide
	paths to include and lib directories for linking make_strings
	tool when building from scratch.
	
2002-04-23  Adam Fedor  <fedor@gnu.org>

	* Source/GSFFIInvocation.m
	(-initWithCallback:returnp:values:frame:signature:): Simplify
	setting values. Structs passed by ref when MFRAME_STRUCT_BYREF.
	(GSFFIInvokeWithTargetAndImp): Encoding values unneedded now.
	(gs_objc_msg_forward): Free the closure via NSData.

	* Source/mframe/powerpc/generic: Fix offset for structs.
	* Source/mframe/powerpc/linux-gnu: Idem.
	* Source/mframe/powerpc/darwin: Idem.
	
2002-04-22  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (gdomap_log): For LOG_INFO, write to 1, not 0.

	* Tools/make_strings: New tool from Alexander Malmberg
	<alexander@malmberg.org>

	* Source/Additional/Makefile.preamble (ADDITIONAL_OBJCFLAGS):
	Add for building DLL on mingw32

2002-04-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSURL.m: ([-absoluteString]) anonymous bugfix applied.

2002-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: If given -NSHost specification for the current host,
	ignore it and use the standard name.
	* Source/GSTcpPort.m: ([-invalidate]) call superclass implementation
	at end ... so handles can find this port when they are destroying
	themselves.  Reverses last change I made to this.

2002-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/COPYING.LIB: New file ... just to make it *REALLY* obvious
	this code is under the LGPL

2002-04-18  Adam Fedor  <fedor@gnu.org>

	* Minimally working libffi support. Needs work.